Add display of loaded existing contract

--- a/collection.html
+++ b/collection.html
@@ -271,6 +271,17 @@
 	</div>
 </div>
 
+<div class="position-relative header-collection bg-color-18 pt-4 d-none" data-collection="default" style="margin-top:80px">
+	<div class="container">
+		<h2 class="text-center fw-bold mb-2" id="collection-name"></h2>
+		<h6 class="text-center mb-4">
+			<a href="" class="link-color-4" id="collection-contract-address"></a>
+		</h6>
+		
+		<hr class="mb-0">
+	</div>
+</div>
+
 <div class="bg-color-18">
 	<div class="bg-color-6 font-size-100 font-size-md-120 collection-section" data-collection="titans-of-industry">
 		<div class="container text-white text-center py-3">GET 20% DISCOUNT ON PURCHASES USING OWN TOKEN AS PAYMENT ON NEWLY MINTED TITANS OF INDUSTRY NFTS</div>
