--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			
 			<div id="page-content" style="min-height:calc(100vh - 201px)"></div>
 			
-			<div id="artist-section"></div>
+			<div class="d-none" id="artist-section"></div>
 			
 			<div class="w-100 bg-white border-top">
 				<div class="container py-4">
@@ -662,6 +662,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
 	<script src="js/MultiClamp.min.js"></script>
-	<script src="js/script.js?v=4.0.3" id="script"></script>
+	<script src="js/script.js?v=4.0.4" id="script"></script>
 </body>
 </html>
