Change Collection overflow in home page to carousel

--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
 	<div class="container py-5">
 		<p class="text-center rubik-bold font-size-200 font-size-md-280 text-color-5 mb-4">COLLECTIONS</p>
 		
-		<div class="row flex-nowrap overflow-auto py-3" id="collections-container">
+		<div class="py-3" id="collections-container">
 		
 		</div>
 	</div>
