--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 	<title>Ownly Marketplace</title>
 	<link rel="icon" href="img/ownly/own-token.webp">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-<!--	<link rel="stylesheet" href="fontawesome/css/all.css">-->
 	<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
-	<link rel="stylesheet" href="css/style.css?v=29">
+	<link rel="stylesheet" href="js/splide/splide.min.css" />
+	<link rel="stylesheet" href="css/style.css?v=30">
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LBV47LFR4"></script>
 	<script>
@@ -662,6 +662,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
 	<script src="js/MultiClamp.min.js"></script>
-	<script src="js/script.js?v=4.0.5" id="script"></script>
+	<script src="js/splide/splide.min.js"></script>
+	<script src="js/script.js?v=4.0.6" id="script"></script>
 </body>
 </html>
