Integrate self-minting function to launchpad collection pieces

--- a/token.html
+++ b/token.html
@@ -68,7 +68,7 @@
 					<div class="font-size-200 font-size-md-250 neo-black token-price line-height-90"></div>
 				</div>
 				<div class="col-6 text-end">
-					<button class="btn btn-custom-2 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link create-market-sale-confirmation" style="border-radius:15px">OWN NOW</button>
+					<button class="btn btn-custom-2 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link create-market-sale-confirmation" data-type="sale" style="border-radius:15px">OWN NOW</button>
 				</div>
 			</div>
 			
