--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
 					
 					<div class="d-flex">
 						<div class="flex-fill">
-							<input type="text" class="form-control font-size-110 search-field" placeholder="Search Collections, NFTs or enter contract address" style="padding-left:64px; height:60px; border-radius:15px 0 0 15px" />
+							<input type="text" class="form-control font-size-110 search-field" placeholder="Search Collections and NFTs" style="padding-left:64px; height:60px; border-radius:15px 0 0 15px" />
 						</div>
 						<div class="">
 							<button class="btn btn-custom-1 px-5 font-size-110" style="border-radius:0 15px 15px 0; height:60px">SEARCH</button>
