Update routes for each collections

--- a/artist.html
+++ b/artist.html
@@ -7,7 +7,7 @@
 	
 	<div class="bg-color-18">
 		<div class="container py-5">
-			<div class="d-none artist-container" data-collection="titans-of-industry">
+			<div class="d-none artist-container" data-collection="titansofindustry">
 				<div class="d-flex flex-column flex-md-row">
 					<div class="pe-md-5 mb-4 artist-image" style="margin-top:-120px">
 						<div class="background-image-cover w-100 shadow-lg" style="background-image:url('img/artists/Eugene-Oligo.webp'); padding-top:100%"></div>
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 			
-			<div class="d-none artist-container" data-collection="the-mustachios">
+			<div class="d-none artist-container" data-collection="mustachios">
 				<div class="d-flex flex-column flex-md-row">
 					<div class="pe-md-5 mb-4 artist-image" style="margin-top:-120px">
 						<div class="background-image-cover w-100 shadow-lg" style="background-image:url('img/artists/Mustache-Boii.webp'); padding-top:100%"></div>
@@ -142,7 +142,7 @@
 				</div>
 			</div>
 			
-			<div class="d-none artist-container" data-collection="genesis-block">
+			<div class="d-none artist-container" data-collection="genesisblock">
 				<div class="d-flex flex-column flex-md-row">
 					<div class="pe-md-5 mb-4 artist-image" style="margin-top:-120px">
 						<div class="background-image-cover w-100 shadow-lg" style="background-image:url('img/artists/Marso.webp'); padding-top:100%; background-position:75% 75%"></div>
