--- a/collection.html
+++ b/collection.html
@@ -1,4 +1,4 @@
-<div class="position-relative header-collection d-none" data-collection="titans-of-industry" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+<div class="position-relative header-collection d-none" data-collection="titansofindustry" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
 	<div class="bg-color-7 position-absolute h-100" style="top:0; left:0; width:100%; z-index:-1"></div>
 	<div class="bg-white position-absolute h-100 d-none d-lg-block" style="top:0; left:70%; width:30%; z-index:-1"></div>
 	
@@ -28,7 +28,7 @@
 	</div>
 </div>
 
-<div class="position-relative header-collection d-none" data-collection="the-mustachios" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+<div class="position-relative header-collection d-none" data-collection="mustachios" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
 	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/Mustachios_GridBanner02.webp')">
 		<div class="container position-relative">
 			<div class="position-absolute" style="bottom:20px; left:20px">
@@ -87,7 +87,7 @@
 	</div>
 </div>
 
-<div class="position-relative header-collection d-none" data-collection="the-sages-rant-collectibles" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+<div class="position-relative header-collection d-none" data-collection="sagesrantcollectibles" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
 	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/bg/the-sages-rant-collectibles.webp')">
 		<div class="container">
 			<div class="d-flex h-100 align-items-end w-100" style="bottom:50px; left:20px">
@@ -106,7 +106,7 @@
 	</div>
 </div>
 
-<div class="position-relative header-collection d-none" data-collection="genesis-block" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+<div class="position-relative header-collection d-none" data-collection="genesisblock" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
 	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/genesis-block/bg.webp')">
 		<div class="container">
 			<div class="d-flex h-100 align-items-end w-100" style="bottom:50px; left:20px">
