--- a/home.html
+++ b/home.html
@@ -19,10 +19,12 @@
 							<div class="bg-white px-3 pt-2 pb-3" style="border-top-left-radius:10px; border-top-right-radius:10px">
 								<p class="pt-2 font-size-100 mb-0 text-color-7 text-center">Featured NFT</p>
 							</div>
-							<div class="w-100 background-image-contain bg-white" style="background-image:url('https://ownly.tk/nft/the-mustachios/webp/kzvmblfdiygkgtevlglc.webp'); padding-top:100%"></div>
+							<a href="https://ownly.market/oha">
+								<div class="w-100 background-image-contain bg-white" style="background-image:url('https://ownly.tk/nft/oha/3.webp'); padding-top:100%"></div>
+							</a>
 							<div class="bg-white px-3" style="border-bottom-left-radius:10px; border-bottom-right-radius:10px">
-								<p class="pt-2 font-size-80 mb-0 text-color-5 text-center">The Mustachios</p>
-								<p class="pb-3 mb-0 font-size-120 fw-bold text-center">Mexico</p>
+								<a href="https://ownly.market/oha" class="d-block text-decoration-none pt-2 font-size-80 mb-0 link-color-4 text-center">Ownly House of Art</a>
+								<a href="https://ownly.market/?network=eth&contract=0xF8167889B4431d61e1eD667b836AFec84EB01576&token=3" class="d-block text-decoration-none pb-3 mb-0 font-size-120 fw-bold text-center link-color-4">Altered Perspective</a>
 							</div>
 						</div>
 					</div>
