--- a/inkvadyrz/index.html
+++ b/inkvadyrz/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="OWNLY is a metaverse-focused platform that allows creators and collectors to optimize ownership and utility through innovative applications of non-fungible tokens (NFT). Ownly is created to be a meeting place of artists, gamers, and collectors in the crypto and NFT space.">
 	<meta name="author" content="Ownly">
 	
-	<meta property="og:url" content="https://ownly.market/invadyrz" />
+	<meta property="og:url" content="https://ownly.market/inkvadyrz" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Ownly: Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists." />
 	<meta property="og:description" content="OWNLY is a metaverse-focused platform that allows creators and collectors to optimize ownership and utility through innovative applications of non-fungible tokens (NFT). Ownly is created to be a meeting place of artists, gamers, and collectors in the crypto and NFT space." />
