Fix image links inside href

--- a/oha/index.html
+++ b/oha/index.html
@@ -310,14 +310,14 @@
 									<span class="ps-2 pe-1">OWN</span>
 								</button>
 								<ul class="dropdown-menu dropdown-menu-end">
-									<li class="select-price-current" data-image="img/ownly/own-token.png" data-currency="OWN">
+									<li class="select-price-current" data-image="../img/ownly/own-token.png" data-currency="OWN">
 										<button type="button" class="dropdown-item d-flex align-items-center bg-white text-black-50">
 											<img src="../img/ownly/own-token.png" width="22" />
 											<span class="ps-2 fw-bold">OWN</span>
 										</button>
 									</li>
 									<li><hr class="dropdown-divider my-1"></li>
-									<li class="select-price-current" data-image="img/bnb/bnb.webp" data-currency="BNB">
+									<li class="select-price-current" data-image="../img/bnb/bnb.webp" data-currency="BNB">
 										<button type="button" class="dropdown-item d-flex align-items-center bg-white text-black-50">
 											<img src="../img/bnb/bnb.webp" width="22" />
 											<span class="ps-2 fw-bold">BNB</span>
