--- a/titansofindustry/index.html
+++ b/titansofindustry/index.html
@@ -310,14 +310,14 @@
 									<span class="ps-2 pe-1">OWN</span>
 								</button>
 								<ul class="dropdown-menu dropdown-menu-end">
-									<li class="select-price-current" data-image="img/ownly/own-token.png" data-currency="OWN">
+									<li class="select-price-current" data-image="../img/ownly/own-token.png" data-currency="OWN">
 										<button type="button" class="dropdown-item d-flex align-items-center bg-white text-black-50">
 											<img src="../img/ownly/own-token.png" width="22" />
 											<span class="ps-2 fw-bold">OWN</span>
 										</button>
 									</li>
 									<li><hr class="dropdown-divider my-1"></li>
-									<li class="select-price-current" data-image="img/bnb/bnb.webp" data-currency="BNB">
+									<li class="select-price-current" data-image="../img/bnb/bnb.webp" data-currency="BNB">
 										<button type="button" class="dropdown-item d-flex align-items-center bg-white text-black-50">
 											<img src="../img/bnb/bnb.webp" width="22" />
 											<span class="ps-2 fw-bold">BNB</span>
@@ -544,7 +544,7 @@
 					<div class="modal-content">
 						<div class="modal-body">
 							<div class="py-5 text-center">
-								<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:6rem; height:6rem; background-image:url('img/ownly/own-token.png')" role="status">
+								<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:6rem; height:6rem; background-image:url('../img/ownly/own-token.png')" role="status">
 									<span class="visually-hidden">Loading...</span>
 								</div>
 								<h5 class="w-100 font-size-120 text-center message mb-0">Processing</h5>
