Minor updates in Artist Launchpad page

--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
 		<div class="row h-100 align-items-center page-min-height">
 			<div class="col-md-7 col-xl-8 py-5">
 				<div class="position-relative">
-					<h1 class="text-white rubik-bold font-size-250 font-size-lg-300 font-size-xl-400 text-center text-md-start mb-5">Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists.</h1>
+					<h1 class="text-white rubik-bold font-size-280 font-size-lg-350 font-size-xl-450 font-size-xxl-500 text-center text-md-start mb-5">Mint and launch your NFT collection the easy way.</h1>
 					<div class="text-center text-md-start">
-						<a href="#collections" class="d-inline-block btn btn-custom-2 px-5 py-3 mx-1 font-size-110 font-size-sm-120 line-height-120" style="min-width:257px; border-radius:35px; letter-spacing:0.05em">VIEW COLLECTIONS</a>
+						<a href="/launchpad" class="d-inline-block btn btn-custom-2 px-5 py-3 mx-1 font-size-110 font-size-sm-120 line-height-120" style="min-width:257px; border-radius:35px; letter-spacing:0.05em">LAUNCH ARTIST LAUNCHPAD</a>
 					</div>
 				</div>
 			</div>
