--- a/collection.html
+++ b/collection.html
@@ -271,6 +271,35 @@
 	</div>
 </div>
 
+<div class="header-collection" data-collection="3dmustachios" style="min-height:calc(100vh - 80px); margin-top:80px">
+	<div class="w-100 bg-color-8 background-image-cover mt-0">
+		<div class="container">
+			<div class="row align-items-center page-min-height">
+				<div class="col-12 col-lg-6 px-xl-4 px-xxl-5">
+					<div class="mq-banner-logo">
+						<img class="w-100" src="https://ownly.io/img/mq/MQ_logo_banner.png" alt="MQ Logo" />
+					</div>
+					<div class="text-white text-center font-size-100 font-size-sm-120 font-size-md-130 font-size-lg-140 mb-3"><span class="neo-black">Put your power to the test with Mustachio Quest!</span></div>
+					<div class="text-white text-center font-size-100 font-size-sm-120 font-size-md-130 font-size-lg-140 mb-3">Inspired by the tales and adventures of the Mustachios in The Sages Rant, Mustachio Quest is Ownly’s first NFT Play-And-Earn Game created inside MustachioVerse where players can play around using the 3D versions of their Mustachios.</div>
+					<div class="ps-lg-4 mb-5 mb-md-3">
+						<a href="https://mustachioverse.com" target="_blank" class="btn mq-banner-button font-size-100 font-size-md-150 px-5 py-3 mb-2 mb-md-0 me-md-2 w-100 line-height-120">ENTER MUSTACHIOVERSE</a>
+					</div>
+				</div>
+				<div class="d-none d-lg-block col-lg-6">
+					<div class="mq-banner-assets">
+						<div class="mq-banner-portal">
+							<img class="w-100" src="https://ownly.io/img/mq/banner-portal.png" alt="MQ Portal" />
+						</div>
+						<div class="mq-banner-mustachios">
+							<img class="w-100" src="https://ownly.io/img/mq/mustachios.png" alt="MQ Mustachios" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="position-relative header-collection bg-color-18 pt-4 d-none" data-collection="default" style="margin-top:80px">
 	<div class="container">
 		<h2 class="text-center fw-bold mb-2" id="collection-name"></h2>
