--- a/launchpad/index.html
+++ b/launchpad/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Ownly: Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists." />
 	<meta property="og:description" content="OWNLY is a metaverse-focused platform that allows creators and collectors to optimize ownership and utility through innovative applications of non-fungible tokens (NFT). Ownly is created to be a meeting place of artists, gamers, and collectors in the crypto and NFT space." />
-	<meta property="og:image" content="https://ownly.market/img/og/1.png" />
+	<meta property="og:image" content="https://ownly.market/img/og/launchpad.png" />
 	
 	<title>Ownly Market | Launchpad</title>
 	<link rel="icon" href="../img/ownly/own-token.webp">
