Fix collection headers

--- a/collection.html
+++ b/collection.html
@@ -271,7 +271,7 @@
 	</div>
 </div>
 
-<div class="header-collection" data-collection="3dmustachios" style="min-height:calc(100vh - 80px); margin-top:80px">
+<div class="header-collection d-none" data-collection="3dmustachios" style="min-height:calc(100vh - 80px); margin-top:80px">
 	<div class="w-100 bg-color-8 background-image-cover mt-0">
 		<div class="container">
 			<div class="row align-items-center page-min-height">
