Fix Ownly logo in token view

--- a/token.html
+++ b/token.html
@@ -131,7 +131,7 @@
 							<div class="d-flex align-items-center mb-3">
 								<div class="text-color-7">Created by</div>
 								<div class="ps-2">
-									<img src="img/ownly/own-token.webp" width="30" alt="Own" />
+									<img src="../img/ownly/own-token.webp" width="30" alt="Ownly" />
 								</div>
 							</div>
 							
