Fix pagination links

--- a/collection-details.html
+++ b/collection-details.html
@@ -33,7 +33,7 @@
 						<label class="neo-bold mb-2" for="name">Collection URL</label>
 						<div class="d-flex flex-nowrap">
 							<div class="py-2 py-lg-3 px-3 bg-color-1 d-flex align-items-center">
-								<div>https://ownly.market?collection=</div>
+								<div>https://ownly.market/</div>
 							</div>
 							<div class="flex-fill">
 								<input type="text" class="form-control py-2 py-lg-3 px-3" name="url" placeholder="Enter Collection URL" id="url" style="border-width:2px" required />
