--- a/launchpad/index.html
+++ b/launchpad/index.html
@@ -75,7 +75,7 @@
 								<a class="nav-link dropdown-toggle text-color-6" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Collections</a>
 								<ul class="dropdown-menu px-2" aria-labelledby="navbarDropdown">
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=oha" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="oha">
+										<a href="http://ownlyio.dev-marketplace.test/oha" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="oha">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="../img/collection-logos/8.webp" class="shadow-sm rounded-3" width="40" />
@@ -85,7 +85,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=cryptosolitaire" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="cryptosolitaire">
+										<a href="http://ownlyio.dev-marketplace.test/cryptosolitaire" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="cryptosolitaire">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="../img/collection-logos/1.webp" class="shadow-sm rounded-3" width="40" />
@@ -95,7 +95,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=genesis-block" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="genesis-block">
+										<a href="http://ownlyio.dev-marketplace.test/genesisblock" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="genesis-block">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="../img/collection-logos/2.webp" class="shadow-sm rounded-3" width="40" />
@@ -105,7 +105,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=inkvadyrz" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="inkvadyrz">
+										<a href="http://ownlyio.dev-marketplace.test/inkvadyrz" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="inkvadyrz">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="../img/collection-logos/3.webp" class="shadow-sm rounded-3" width="40" />
@@ -115,7 +115,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=rewards" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="rewards">
+										<a href="http://ownlyio.dev-marketplace.test/rewards" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="rewards">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="../img/collection-logos/4.webp" class="shadow-sm rounded-3" width="40" />
@@ -125,7 +125,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=the-mustachios" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="the-mustachios">
+										<a href="http://ownlyio.dev-marketplace.test/mustachios" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="the-mustachios">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="../img/collection-logos/5.webp" class="shadow-sm rounded-3" width="40" />
@@ -135,7 +135,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=the-sages-rant-collectibles" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="the-sages-rant-collectibles">
+										<a href="http://ownlyio.dev-marketplace.test/sagesrantcollectibles" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="the-sages-rant-collectibles">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="../img/collection-logos/6.webp" class="shadow-sm rounded-3" width="40" />
@@ -145,7 +145,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=titans-of-industry" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="titans-of-industry">
+										<a href="http://ownlyio.dev-marketplace.test/titansofindustry" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="titans-of-industry">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="../img/collection-logos/7.webp" class="shadow-sm rounded-3" width="40" />
@@ -682,6 +682,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
 	<script src="../js/MultiClamp.min.js"></script>
 	<script src="../js/splide/splide.min.js"></script>
-	<script src="../js/script.js?v=4.0.9" id="script"></script>
+	<script src="../js/script.js?v=4.1.0" id="script"></script>
 </body>
 </html>
