Add Artist Launchpad to nav and Add Eugene Oligo to testimonials section in Artist Launchpad

--- a/navbar.html
+++ b/navbar.html
@@ -121,6 +121,10 @@
 				</li>
 				
 				<li class="nav-item px-2">
+					<a class="nav-link text-color-6 replace-host" href="http://ownlyio.marketplace.test/launchpad">Artist&nbsp;Launchpad</a>
+				</li>
+				
+				<li class="nav-item px-2">
 					<a class="nav-link text-color-6 replace-host" href="http://ownlyio.marketplace.test/?sales">NFT&nbsp;Sales</a>
 				</li>
 			</ul>
