Update FAQ section

--- a/launchpad/index.html
+++ b/launchpad/index.html
@@ -405,7 +405,7 @@
 										I’m new in the crypto art space. Where do I go?
 									</button>
 								</h2>
-								<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+								<div id="collapseOne" class="accordion-collapse collapse show bg-color-1" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
 									<div class="accordion-body font-size-130 p-4">The Ownly Market Artist Launchpad is welcome to everyone. Whether you’re new or a veteran in the space, you can join us on the <a href="https://ownly.io/discord" target="_blank" class="link-color-5">Ownly Discord community</a> and <a href="https://discord.gg/D8MRzAtsKv" target="_blank" class="link-color-5">Crypto Art PH Discord</a> community to connect with like-minded NFT enthusiasts who either got the same questions or have the answers to your questions. Either way, you’re not alone!</div>
 								</div>
 							</div>
@@ -415,7 +415,7 @@
 										I’m an NFT collector. How can I support these artists?
 									</button>
 								</h2>
-								<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+								<div id="collapseTwo" class="accordion-collapse collapse bg-color-1" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
 									<div class="accordion-body font-size-130 p-4">This is great to hear! Thank you for your interest in supporting these brilliant artists. To show your support, you can check out the existing NFT collections in the <a href="https://ownly.market" target="_blank" class="link-color-5">Ownly Market</a> and #OWN some artworks from our distinguished artists.</div>
 								</div>
 							</div>
@@ -425,7 +425,7 @@
 										How does the Ownly Market Artist Launchpad work?
 									</button>
 								</h2>
-								<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+								<div id="collapseThree" class="accordion-collapse collapse bg-color-1" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
 									<div class="accordion-body font-size-130 p-4">The Ownly Market Artist Launchpad is a platform where gifted artists in the Crypto Art industry can mint and launch their NFT collections without the hustle of creating minting websites and smart contracts. All you need to do as an artist is to prepare, mint, and launch your NFT collection on the platform and Ownly will handle the rest.</div>
 								</div>
 							</div>
@@ -435,7 +435,7 @@
 										What is the Ownly x Crypto Art PH partnership about?
 									</button>
 								</h2>
-								<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+								<div id="collapseFour" class="accordion-collapse collapse bg-color-1" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
 									<div class="accordion-body font-size-130 p-4">As part of our Ownly Market Artist Launchpad launch, Crypto Art PH will help curate the artists and their NFT collections from within the community. This will further improve the NFT scene in the Philippines as the Ownly Market Artist Launchpad aims to showcase works from gifted artists all over the nation, while providing them with a platform that does the work for them. <a href="https://discord.gg/D8MRzAtsKv" target="_blank" class="link-color-5">Join the Crypto Art PH Discord community here</a>.</div>
 								</div>
 							</div>
@@ -445,7 +445,7 @@
 										Who should I reach if I encounter any issues?
 									</button>
 								</h2>
-								<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+								<div id="collapseFive" class="accordion-collapse collapse bg-color-1" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
 									<div class="accordion-body font-size-130 p-4">If you encounter any issues, please don’t hesitate to reach out to us via email at support@ownly.io and we’ll get back to you the soonest we’re available to respond. We also have a Discord channel exclusive to provide support to the community. To access, please join our <a href="https://ownly.io/discord" target="_blank" class="link-color-5">Ownly Discord community</a> and browse through the channels. You can find the <b>support</b> channel under Community Feedback.</div>
 								</div>
 							</div>
