--- a/navbar.html
+++ b/navbar.html
@@ -125,7 +125,11 @@
 				</li>
 				
 				<li class="nav-item px-2">
-					<a class="nav-link text-color-6 replace-host" href="http://ownlyio.marketplace.test/?sales">NFT&nbsp;Sales</a>
+					<a class="nav-link text-color-6 replace-host" href="http://ownlyio.marketplace.test/artists">Artists</a>
+				</li>
+				
+				<li class="nav-item px-2">
+					<a class="nav-link text-color-6 replace-host" href="http://ownlyio.marketplace.test/?sales">Sales</a>
 				</li>
 			</ul>
 			
