Fix Eugene Oligo's testimonial

--- a/launchpad/index.html
+++ b/launchpad/index.html
@@ -219,7 +219,7 @@
 									<div class="row py-5 min-vh-100 align-items-xl-center">
 										<div class="col-xl-8 order-1 order-xl-0">
 											<p class="text-center text-xl-start text-color-10 fw-bold font-size-280 font-size-md-400 mb-4">Eugene Oligo</p>
-											<p class="text-center text-xl-start text-white fw-bold font-size-150 font-size-md-200 mb-4">“It was fun doing the Titans in Industry collection.”</p>
+											<p class="text-center text-xl-start text-white fw-bold font-size-150 font-size-md-200 mb-4">“It was fun doing the Titans of Industry collection.”</p>
 											<p class="text-center text-xl-start text-white font-size-100 font-size-md-120 mb-4 line-height-150 mb-4 pb-4">Thanks to Ownly, for giving me the opportunity to be part of this project. I've learned a lot about NFTs, how they work, and so on, it's cool. This is a great instrument to help other creatives be introduced to the world of NFTs. I hope for more success in your future projects!</p>
 											
 											<div class="text-center text-xl-start">
