Add make offer function UI

--- a/token.html
+++ b/token.html
@@ -68,7 +68,7 @@
 					<div class="font-size-200 font-size-md-250 neo-black token-price line-height-90"></div>
 				</div>
 				<div class="col-6 text-end">
-					<button class="btn btn-custom-2 font-size-110 font-size-md-120 neo-bold px-4 px-md-5 link create-market-sale-confirmation" data-type="sale" style="border-radius:15px">OWN NOW</button>
+					<button class="btn btn-custom-2 font-size-90 font-size-lg-100 font-size-xxl-110 py-3 neo-bold px-4 px-md-5 link create-market-sale-confirmation" data-type="sale" style="border-radius:15px">OWN NOW</button>
 				</div>
 			</div>
 			
@@ -96,7 +96,7 @@
 					<div class="font-size-90 owner-address"></div>
 				</div>
 				<div class="col-6">
-					<button class="btn btn-custom-4 w-100 font-size-100 font-size-md-120 neo-bold create-market-item-confirmation" style="border-radius:15px">SELL NOW</button>
+					<button class="btn btn-custom-4 w-100 font-size-90 font-size-lg-100 font-size-xxl-110 py-3 neo-bold create-market-item-confirmation" style="border-radius:15px">SELL NOW</button>
 				</div>
 			</div>
 			
@@ -109,7 +109,7 @@
 					<div class="font-size-90 owner-address"></div>
 				</div>
 				<div class="col-6">
-					<div class="w-100 font-size-100 font-size-md-120 text-center neo-bold sold-out-label" style="border-radius:5px; background-color:#e1e3e3; border-color:#c7c9c9; padding-top:6px; padding-bottom:6px; line-height:1.5">SOLD OUT</div>
+					<button class="btn btn-custom-6 w-100 line-height-110 font-size-90 font-size-lg-110 neo-bold py-3 make-offer-show-modal" data-contract-address="' + contractAddress + '" data-token-id="' + i + '" style="border-radius:15px">MAKE OFFER</button>
 				</div>
 			</div>
 			
