Refactor modals and footer section Add initial make offer modal with signing Add newsletter agreement Add privacy policy links

--- a/token.html
+++ b/token.html
@@ -109,7 +109,8 @@
 					<div class="font-size-90 owner-address"></div>
 				</div>
 				<div class="col-6">
-					<button class="btn btn-custom-6 w-100 line-height-110 font-size-90 font-size-lg-110 neo-bold py-3 make-offer-show-modal" data-contract-address="' + contractAddress + '" data-token-id="' + i + '" style="border-radius:15px">MAKE OFFER</button>
+<!--					<button class="btn btn-custom-6 w-100 line-height-110 font-size-90 font-size-lg-110 neo-bold py-3 make-offer-show-modal" data-contract-address="' + contractAddress + '" data-token-id="' + i + '" style="border-radius:15px">MAKE OFFER</button>-->
+					<button class="btn btn-custom-17 w-100 line-height-110 font-size-90 font-size-lg-110 neo-bold py-3" style="border-radius:15px" disabled>SOLD OUT</button>
 				</div>
 			</div>
 			
