Add fetching and display of offers in token view

--- a/token.html
+++ b/token.html
@@ -15,6 +15,18 @@
 					<img src="" class="d-none" id="transparent-bg-mustachio-preload" alt="Token" />
 				</div>
 			</div>
+			
+			<div class="card mt-4">
+				<div class="card-header bg-white fw-bold font-size-110 py-3">Offers</div>
+				
+				<div id="offers-container">
+					<div class="d-flex justify-content-center py-5">
+						<div class="spinner-grow background-image-cover bg-transparent" style="width:3rem; height:3rem; background-image:url('../img/ownly/own-token.png')" role="status">
+							<span class="visually-hidden">Loading...</span>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		
 		<div class="col-md-6 col-xxl-7 ps-lg-3 ps-xl-4 mt-4 mt-md-5">
@@ -109,8 +121,8 @@
 					<div class="font-size-90 owner-address"></div>
 				</div>
 				<div class="col-6">
-<!--					<button class="btn btn-custom-6 w-100 line-height-110 font-size-90 font-size-lg-110 neo-bold py-3 make-offer-show-modal" data-contract-address="' + contractAddress + '" data-token-id="' + i + '" style="border-radius:15px">MAKE OFFER</button>-->
-					<button class="btn btn-custom-17 w-100 line-height-110 font-size-90 font-size-lg-110 neo-bold py-3" style="border-radius:15px" disabled>SOLD OUT</button>
+					<button class="btn btn-custom-6 w-100 line-height-110 font-size-90 font-size-lg-110 neo-bold py-3 make-offer-show-modal" data-contract-address="' + contractAddress + '" data-token-id="' + i + '" style="border-radius:15px">MAKE OFFER</button>
+<!--					<button class="btn btn-custom-17 w-100 line-height-110 font-size-90 font-size-lg-110 neo-bold py-3" style="border-radius:15px" disabled>SOLD OUT</button>-->
 				</div>
 			</div>
 			
