--- a/token.html
+++ b/token.html
@@ -160,18 +160,18 @@
 					</h2>
 					<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
 						<div class="accordion-body">
-							<div class="about-the-collection d-none" data-collection="titans-of-industry">
+							<div class="about-the-collection d-none" data-collection="titansofindustry">
 								Created by multimedia artist Eugene Oligo, our collaboration entitled Titans of Industry features the pioneers, entrepreneurs, and titans of the crypto space. This collection will surely help you recognize the big ones, their feats, and their impact on the blockchain world.
 							</div>
 							<div class="about-the-collection d-none" data-collection="oha">
 								Ownly House of Art (OHA) is a collection of tokenized physical art. It provides a solution to traditional artists that needs more exposure and collectors that need a frictionless acquisition of high-value physical art pieces. OHA, through the use of NFTs, creates a seamless, transparent, and more efficient sales process.
 							</div>
-							<div class="about-the-collection d-none" data-collection="genesis-block">
+							<div class="about-the-collection d-none" data-collection="genesisblock">
 								<p>Marso presents another collection of work combining the elegance of geometry and a vibrant color palette dubbed as the ‘Genesis Block’ of Blockchain, reminiscent of the ceiling of the famous Sistine Chapel.</p>
 								<p>This collection can both stand alone as an individual piece or as a whole with every piece being unique leading to a culmination of the ‘creation’ and establishing of the whole blockchain space.</p>
 								<p>With that being said, the whole collection can be viewed starting from the bottom left (Creation), bottom middle (Distribution), bottom right, (Progress), top left (Prosperity), top middle (Liberty & Freedom), top right (Community), middle right (Immersion), middle right (Integration), and ends in the middle (Eden).</p>
 							</div>
-							<div class="about-the-collection d-none" data-collection="the-mustachios">
+							<div class="about-the-collection d-none" data-collection="mustachios">
 								Boii Mustache, the artist behind these avatars, describes them as 100 mustached explorers living in a hidden, mysterious, and magical island called MustachioVerse. Each of these Mustachios lived and thrived for over a hundred years, waiting for their turn to tell their own unique tale of adventure. One day, ten brave Mustachios discovered a mysterious torn journal written by The Prospector — the first-ever Mustachio who conquered every possible feat in their universe. Stories have been told about his glory, but no one knows The Prospector’s identity. His Lost Diary mentioned that he discovered 9 valuable artifacts and a precious golden ‘stache — the key in solving the greatest mystery in the land: why do they all have a mustache?
 							</div>
 							<div class="about-the-collection d-none" data-collection="cryptosolitaire">
@@ -183,8 +183,11 @@
 							<div class="about-the-collection d-none" data-collection="rewards">
 								The collection composes of Ownly rewards for Private Sale and IDO participants, and top collectors for both Mustachio and Inkvadyrz collections.
 							</div>
-							<div class="about-the-collection d-none" data-collection="the-sages-rant-collectibles">
+							<div class="about-the-collection d-none" data-collection="sagesrantcollectibles">
 								The Sages Rant Collectibles is a collection of single-edition, legendary pieces that can be acquired by participating in our auction happening this Q4 of 2021. Holders of these backgrounds and artifacts receive distinct strengths and can boost the rarity of their Mustachios — granting magical abilities and unlimited potentials.
+							</div>
+							<div class="about-the-collection d-none" data-collection="3dmustachios">
+								A collection of 3D mustached NFT avatars called Mustachios created by the one and only Boii Mustache. The tales and adventures of these NFT avatars inspired Ownly’s upcoming play-and-earn game, Mustachio Quest. Check out <a href="https://mustachioverse.com" class="link-color-4">mustachioverse.com</a> for more details.
 							</div>
 						</div>
 					</div>
