Update 3D Mustachios collection name

--- a/navbar.html
+++ b/navbar.html
@@ -93,7 +93,7 @@
 									<div class="pe-3">
 										<img src="img/collection-logos/9.webp" class="shadow-sm rounded-3 add-public-url" width="40" />
 									</div>
-									<div class="font-size-sm-110 pe-2">Mustachio Pathfinders (3D)</div>
+									<div class="font-size-sm-110 pe-2">Mustachios (3D)</div>
 								</div>
 							</a>
 						</li>
