--- a/token.html
+++ b/token.html
@@ -16,7 +16,7 @@
 				</div>
 			</div>
 			
-			<div class="card mt-4">
+			<div class="card mt-4 d-none">
 				<div class="card-header bg-white fw-bold font-size-110 py-3">Offers</div>
 				
 				<div id="offers-container">
@@ -64,7 +64,7 @@
 			<div class="font-size-110 neo-bold mb-4 pb-1">#1 of 1 - Single Edition</div>
 			
 			<div class="pb-3 text-center" id="token-loading">
-				<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:4rem; height:4rem; background-image:url('img/ownly/own-token.png')" role="status">
+				<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:4rem; height:4rem; background-image:url('../img/ownly/own-token.png')" role="status">
 					<span class="visually-hidden">Loading...</span>
 				</div>
 			</div>
@@ -74,7 +74,7 @@
 					<div class="d-flex align-items-end mb-2">
 						<div class="font-size-110 font-size-md-120 fw-bold">Price:</div>
 						<div class="ps-2 ms-1">
-							<img src="img/ownly/own-token.png" class="token-price-currency" width="30" />
+							<img src="../img/ownly/own-token.png" class="token-price-currency" width="30" />
 						</div>
 					</div>
 					<div class="font-size-200 font-size-md-250 neo-black token-price line-height-90"></div>
@@ -89,7 +89,7 @@
 					<div class="d-flex align-items-end mb-2">
 						<div class="font-size-110 font-size-md-120 fw-bold">Price:</div>
 						<div class="ps-2 ms-1">
-							<img src="img/ownly/own-token.png" class="token-price-currency" width="30" />
+							<img src="../img/ownly/own-token.png" class="token-price-currency" width="30" />
 						</div>
 					</div>
 					<div class="font-size-200 font-size-md-250 neo-black token-price"></div>
