Update api endpoint to ip address format

--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
 								<p class="pt-2 font-size-100 mb-0 text-color-7 text-center">Featured NFT</p>
 							</div>
 							<a href="https://ownly.market/oha">
-								<div class="w-100 background-image-contain bg-white" style="background-image:url('https://ownly.tk/nft/oha/3.webp'); padding-top:100%"></div>
+								<div class="w-100 background-image-contain bg-white" style="background-image:url('http://142.93.51.143/nft/oha/3.webp'); padding-top:100%"></div>
 							</a>
 							<div class="bg-white px-3" style="border-bottom-left-radius:10px; border-bottom-right-radius:10px">
 								<a href="https://ownly.market/oha" class="d-block text-decoration-none pt-2 font-size-80 mb-0 link-color-4 text-center">Ownly House of Art</a>
